--- a/index.html
+++ b/index.html
@@ -58,8 +58,12 @@
     <!--Home-->
     <div id="home">
         <h1>Hope For Humanity</h1>
-       <button class="btn-start">Contact</button>
-       <button class="btn-donate">Donate</button>
+        <div class="row">
+          <div class="col-md-4 col-lg-2">
+            <button class="btn btn-primary btn-block btn-donate">Donate</button>
+          </div>
+        </div>
+ <!--<button class="btn-donate">Donate</button>-->
     </div>
     
     
